--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ url: https://wirbelstrm.github.io/
 description: "Write an awesome description for your new site here. You can edit this line in _config.yml. It will appear in your document head meta (for Google search results) and in your feed.xml site description."
 keywords: "your keywords, separated by commas"
 skills: "Sprecher - Schauspieler - Künstler"
-meta_author: LastName FirstName
+meta_author: Wind Marco
 
 # Google webmaster tools
 google_verify:
@@ -39,16 +39,19 @@ footer:
 
 # Social networks usernames (many more available: google-plus, flickr, dribbble, pinterest, instagram, tumblr, linkedin, etc.)
 social:
-  - title: twitter
-    url: http://twitter.com/jekyllrb
-  - title: facebook
-    url:
-  - title: stack-overflow
-    url: http://stackoverflow.com/questions/tagged/jekyll
-  - title: bitbucket
-    url: http://bitbucket.org/jekyll
-  - title: github
-    url: http://github.com/jekyll
+  #- title: twitter
+  #  url: http://twitter.com/jekyllrb
+  #- title: facebook
+  #  url:
+  #- title: stack-overflow
+  #  url: http://stackoverflow.com/questions/tagged/jekyll
+  #- title: bitbucket
+  #  url: http://bitbucket.org/jekyll
+  #- title: github
+  #  url: http://github.com/jekyll
+  - title: instagram
+    url: https://www.instagram.com/ein_kunterbunter_wirbelwnd/profilecard/?igsh=MXhtbGNqeHZxMnV6Zw==
+
 
 # Postal address (add as many lines as necessary)
 #address:
